adding tmux stuff

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,5 @@
     ~/.vimrc: vimrc
     ~/.zshrc: zshrc
     ~/.inputrc: inputrc
-    ~/.bash_aliases: bash_aliases
     ~/.functions: functions
-    ~/.vim: vim
+    ~/.tmux.conf: tmux.conf
