--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,3 +12,5 @@
     ~/.inputrc: inputrc
     ~/.functions: functions
     ~/.tmux.conf: tmux.conf
+    ~/.git-prompt.sh: git-prompt.sh
+    ~/.git-completion.bash: git-completion.bash
