oh geeze its been a while

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
+set -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL -l"
 set -g default-terminal "screen-256color"
 set -g mouse on
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
